# SharedMap

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build.sh  main.cpp  pyproject.toml
.github/workflows/: wheels.yml
include/: libsharedmap.h  libsharedmaptypes.h
lib/: CMakeLists.txt  libsharedmap.cpp
python/: README.md  sharedmap_bindings.cpp
python/sharedmap/: __init__.py
src/datastructures/: csr_graph.h  flat_translation_table.h  graph.h  item.h  solver.h  translation_table.h
src/partitioning/: layer.cpp  layer.h  naive.cpp  naive.h  nb_layer.cpp  nb_layer.h  partition.cpp  partition.h  partition_util.cpp  partition_util.h  queue.cpp  queue.h  serial.cpp  serial.h
src/profiling/: stat_collector.h
src/utility/: JSON_utils.cpp  JSON_utils.h  algorithm_configuration.cpp  algorithm_configuration.h  algorthm_configuration.h  build_anchor.cpp  command_line_parser.h  context.h  definitions.h  macros.h  qap.cpp  qap.h  types.h  utils.cpp  utils.h
