[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "sharedmap"
version = "1.0.0"
description = "Parallel shared-memory hierarchical process mapping"
readme = "README.md"
authors = [
    {name = "Henning Woydt", email = "henning.woydt@informatik.uni-heidelberg.de"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20"
]
keywords = ["graph-partitioning", "process-mapping", "parallel-computing", "hpc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/HenningWoydt/SharedMap"
Repository = "https://github.com/HenningWoydt/SharedMap"
Documentation = "https://github.com/HenningWoydt/SharedMap#readme"
Issues = "https://github.com/HenningWoydt/SharedMap/issues"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.verbose = false
wheel.packages = ["python/sharedmap"]

[tool.scikit-build.cmake.define]
SHAREDMAP_DOWNLOAD_TBB = "ON"
CMAKE_POSITION_INDEPENDENT_CODE = "ON"

[tool.cibuildwheel]
build-verbosity = 1
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux_* *-win32 *-manylinux_i686"
before-build = "./build.sh"
test-requires = "numpy"
test-command = "python -c 'import sharedmap; print(sharedmap.__version__)'"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
